// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render RecipeList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-desktop"
    >
      Recipe
    </div>
    <div
      className="show-for-mobile"
    >
      Recipes
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No recipes
      </span>
    </div>
  </div>
</div>
`;

exports[`should render RecipeList with recipes 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-desktop"
    >
      Recipe
    </div>
    <div
      className="show-for-mobile"
    >
      Recipes
    </div>
  </div>
  <div
    className="list-body"
  >
    <RecipeListItem
      createdAt={0}
      description="How to do in selector test"
      id="1"
      key="1"
      note=""
      title="Ricetta in selector test"
    />
    <RecipeListItem
      createdAt={-345600000}
      description="RENT"
      id="2"
      key="2"
      note=""
      title="Ricetta in selector test"
    />
    <RecipeListItem
      createdAt={345600000}
      description="PC"
      id="3"
      key="3"
      note=""
      title="Prova"
    />
  </div>
</div>
`;
